adding an api token

--- a/config.json.example
+++ b/config.json.example
@@ -4,6 +4,7 @@
     "prefix": "$",
     "ownerid": "<yourid>",
     "dbltoken": "Discord Bots Token",
+    "glottoken": "glot.io api token",
     "cs": 4896839,
     "ce": 13652807,
     "cn": 40863,
