--- a/config.json.example
+++ b/config.json.example
@@ -1,18 +1,22 @@
 {
-    "token": "Discord API Token",
-    "psqllogin": "psql login url",
-    "prefix": "$",
-    "ownerid": "<yourid>",
-    "dbltoken": "Discord Bots Token",
-    "glottoken": "glot.io api token",
+    "token": "a-real-token",
+    "psqllogin": "postgresql://somerealurl",
+    "prefix": "<",
+    "ownerid": "1234",
+    "dbltoken": "dbl token",
     "cs": 4896839,
     "ce": 13652807,
     "cn": 40863,
     "cw": 11220480,
     "ci": "36393f",
+    "glottoken": "glot interpreting",
     "loading": "<a:BE_loading:505378765950550036>",
     "updating": "<a:BE_updating:505372749846544385>",
+    "done": "<a:BE_YES:513771657383378973>",
+    "empty": "<:empty:604779509568241684>",
     "crashed": "<:crashed:589476154201866243>",
-    "voteauth": "<post secret from dbl>",
-    "voteurl": "https://webhooks.chilo.space/better-airhorn"
+    "voteauth": "hmmm",
+    "voteurl": "some vote url",
+    "sentry": "sentri.io url",
+    "prod": false
 }
