--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "dependencies": {
         "@sentry/node": "^5.6.1",
         "@types/eslint": "^4.16.6",
+        "@types/event-loop-lag": "^1.0.30",
         "@types/get-folder-size": "^2.0.0",
         "@types/node-fetch": "^2.5.0",
         "@types/pg": "^7.4.14",
         "@typescript-eslint/eslint-plugin": "^1.13.0",
         "@typescript-eslint/parser": "^1.13.0",
         "@typescript-eslint/typescript-estree": "^1.13.0",
+        "appmetrics-dash": "^5.0.0",
         "better-sqlite-pool": "^0.1.2",
         "bufferutil": "^4.0.1",
         "chance": "^1.0.18",
@@ -41,8 +43,7 @@
         "dotenv": "^8.0.0",
         "enmap": "^4.8.7",
         "eslint": "^6.1.0",
-        "ffmpeg-binaries": "^4.0.0",
-        "ffmpeg-static": "^2.5.0",
+        "event-loop-lag": "^1.4.0",
         "filesize-parser": "^1.5.0",
         "get-folder-size": "^2.0.1",
         "node-fetch": "^2.6.0",
