--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     },
     "homepage": "https://gitlab.com/Clemens.E/better-airhorn#README",
     "dependencies": {
+        "@rocka/mp3-duration": "^2.0.0",
         "@sentry/node": "^5.6.1",
         "@types/eslint": "^4.16.6",
         "@types/event-loop-lag": "^1.0.30",
         "@types/get-folder-size": "^2.0.0",
+        "@types/mkdirp": "^0.5.2",
+        "@types/node": "^12.7.2",
         "@types/node-fetch": "^2.5.0",
         "@types/pg": "^7.4.14",
+        "@types/string-similarity": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^1.13.0",
         "@typescript-eslint/parser": "^1.13.0",
         "@typescript-eslint/typescript-estree": "^1.13.0",
@@ -46,6 +50,7 @@
         "event-loop-lag": "^1.4.0",
         "filesize-parser": "^1.5.0",
         "get-folder-size": "^2.0.1",
+        "mkdirp": "^0.5.1",
         "node-fetch": "^2.6.0",
         "node-lame": "^1.2.0",
         "node-opus": "^0.3.2",
@@ -54,7 +59,9 @@
         "readdirp": "^3.1.1",
         "shortid": "^2.2.14",
         "snyk": "^1.199.2",
+        "string-similarity": "^3.0.0",
         "typescript": "^3.5.3",
+        "veza": "^1.0.0",
         "zlib-sync": "^0.1.5",
         "zucc": "^0.1.2"
     },
