--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "ts-node ./src/index.ts"
+        "start": "ts-node ./src/index.ts",
+        "build": "tsc -p ."
     },
     "repository": {
         "type": "git",
@@ -25,19 +26,20 @@
     "dependencies": {
         "@rocka/mp3-duration": "^2.0.0",
         "@sentry/node": "^5.6.1",
-        "@types/eslint": "^4.16.6",
+        "@types/eslint": "^6.1.1",
         "@types/event-loop-lag": "^1.0.30",
+        "@types/fluent-ffmpeg": "^2.1.10",
         "@types/get-folder-size": "^2.0.0",
         "@types/mkdirp": "^0.5.2",
         "@types/node": "^12.7.2",
         "@types/node-fetch": "^2.5.0",
         "@types/pg": "^7.4.14",
         "@types/string-similarity": "^3.0.0",
-        "@typescript-eslint/eslint-plugin": "^1.13.0",
-        "@typescript-eslint/parser": "^1.13.0",
-        "@typescript-eslint/typescript-estree": "^1.13.0",
+        "@typescript-eslint/eslint-plugin": "^2.0.0",
+        "@typescript-eslint/parser": "^2.0.0",
+        "@typescript-eslint/typescript-estree": "^2.0.0",
         "appmetrics-dash": "^5.0.0",
-        "better-sqlite-pool": "^0.1.2",
+        "better-sqlite-pool": "^0.2.2",
         "bufferutil": "^4.0.1",
         "chance": "^1.0.18",
         "cuid": "^2.1.6",
@@ -45,22 +47,20 @@
         "discord-message-tasks": "^1.0.5",
         "discord.js": "github:discordjs/discord.js",
         "dotenv": "^8.0.0",
-        "enmap": "^4.8.7",
-        "eslint": "^6.2.1",
+        "enmap": "^5.1.2",
+        "eslint": "^6.2.2",
         "event-loop-lag": "^1.4.0",
         "filesize-parser": "^1.5.0",
-        "get-folder-size": "^2.0.1",
+        "lame": "github:TooTallNate/node-lame",
         "mkdirp": "^0.5.1",
         "node-fetch": "^2.6.0",
         "node-lame": "^1.2.0",
         "node-opus": "^0.3.2",
-        "opus": "0.0.0",
         "pg": "^7.12.0",
         "readdirp": "^3.1.1",
-        "shortid": "^2.2.14",
-        "snyk": "^1.199.2",
+        "snyk": "^1.221.1",
         "string-similarity": "^3.0.0",
-        "typescript": "^3.5.3",
+        "typescript": "^3.6.2",
         "veza": "^1.0.0",
         "zlib-sync": "^0.1.5",
         "zucc": "^0.1.2"
@@ -79,5 +79,7 @@
         "ext": "ts"
     },
     "snyk": true,
-    "devDependencies": {}
+    "devDependencies": {
+        "ts-node": "^8.3.0"
+    }
 }
