Adding stats & leave while fixing some stuff

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@types/fluent-ffmpeg": "^2.1.10",
         "@types/get-folder-size": "^2.0.0",
         "@types/mkdirp": "^0.5.2",
+        "@types/moment-duration-format": "^2.2.2",
         "@types/node": "^12.7.2",
         "@types/node-fetch": "^2.5.0",
         "@types/pg": "^7.4.14",
@@ -53,6 +54,7 @@
         "filesize-parser": "^1.5.0",
         "lame": "github:TooTallNate/node-lame",
         "mkdirp": "^0.5.1",
+        "moment-duration-format": "2.2.2",
         "node-fetch": "^2.6.0",
         "node-lame": "^1.2.0",
         "node-opus": "^0.3.2",
