--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "eslint": "^6.2.2",
         "event-loop-lag": "^1.4.0",
         "filesize-parser": "^1.5.0",
+        "js-logger": "^1.6.0",
         "lame": "github:TooTallNate/node-lame",
         "mkdirp": "^0.5.1",
         "moment-duration-format": "2.2.2",
