--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "dependencies": {
         "@rocka/mp3-duration": "^2.0.0",
         "@sentry/node": "^5.6.1",
+        "@types/common-tags": "^1.8.0",
         "@types/eslint": "^6.1.1",
         "@types/event-loop-lag": "^1.0.30",
+        "@types/express": "^4.17.1",
         "@types/fluent-ffmpeg": "^2.1.10",
         "@types/get-folder-size": "^2.0.0",
         "@types/mkdirp": "^0.5.2",
         "@types/moment-duration-format": "^2.2.2",
-        "@types/node": "^12.7.2",
+        "@types/node": "^12.7.8",
         "@types/node-fetch": "^2.5.0",
         "@types/pg": "^7.4.14",
         "@types/string-similarity": "^3.0.0",
@@ -46,6 +48,7 @@
         "better-sqlite-pool": "^0.2.2",
         "bufferutil": "^4.0.1",
         "chance": "^1.0.18",
+        "common-tags": "^1.8.0",
         "cuid": "^2.1.6",
         "dblapi.js": "^2.3.0",
         "discord-message-tasks": "^1.0.5",
@@ -54,6 +57,7 @@
         "enmap": "^5.1.2",
         "eslint": "^6.2.2",
         "event-loop-lag": "^1.4.0",
+        "express": "^4.17.1",
         "filesize-parser": "^1.5.0",
         "js-logger": "^1.6.0",
         "lame": "github:TooTallNate/node-lame",
