cleanup of cleanup

--- a/package.json
+++ b/package.json
@@ -36,43 +36,42 @@
         "@types/mkdirp": "^0.5.2",
         "@types/moment-duration-format": "^2.2.2",
         "@types/node": "^12.7.8",
-        "@types/node-fetch": "^2.5.0",
-        "@types/pg": "^7.4.14",
+        "@types/node-fetch": "^2.5.2",
+        "@types/pg": "^7.11.2",
         "@types/string-similarity": "^3.0.0",
         "@types/ws": "^6.0.3",
-        "@typescript-eslint/eslint-plugin": "^2.0.0",
-        "@typescript-eslint/parser": "^2.0.0",
-        "@typescript-eslint/typescript-estree": "^2.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.3.1",
+        "@typescript-eslint/parser": "^2.3.1",
+        "@typescript-eslint/typescript-estree": "^2.3.1",
         "abort-controller": "^3.0.0",
-        "appmetrics-dash": "^5.0.0",
+        "appmetrics-dash": "^5.2.0",
         "better-sqlite-pool": "^0.2.2",
         "bufferutil": "^4.0.1",
         "chance": "^1.0.18",
         "common-tags": "^1.8.0",
         "cuid": "^2.1.6",
-        "dblapi.js": "^2.3.0",
         "discord-message-tasks": "^1.0.5",
         "discord.js": "github:vladfrangu/discOwOd.js#sharding-cleanup",
         "dotenv": "^8.0.0",
         "enmap": "^5.1.2",
-        "eslint": "^6.2.2",
+        "eslint": "^6.5.0",
         "event-loop-lag": "^1.4.0",
-        "express": "^4.17.1",
         "filesize-parser": "^1.5.0",
         "js-logger": "^1.6.0",
         "lame": "github:TooTallNate/node-lame",
         "mkdirp": "^0.5.1",
+        "moment": "^2.24.0",
         "moment-duration-format": "2.2.2",
         "node-fetch": "^2.6.0",
         "node-lame": "^1.2.0",
         "node-opus": "^0.3.2",
         "pg": "^7.12.0",
         "readdirp": "^3.1.1",
-        "snyk": "^1.221.1",
+        "snyk": "^1.228.5",
         "string-similarity": "^3.0.0",
-        "typescript": "^3.6.2",
+        "typescript": "^3.6.3",
         "typescript-estree": "^18.1.0",
-        "veza": "^1.0.0",
+        "veza": "^1.1.0",
         "zlib-sync": "^0.1.5"
     },
     "nodemonConfig": {
@@ -90,6 +89,6 @@
     },
     "snyk": true,
     "devDependencies": {
-        "ts-node": "^8.3.0"
+        "ts-node": "^8.4.1"
     }
 }
