--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@rocka/mp3-duration": "^2.0.0",
         "@sentry/node": "^5.6.1",
         "@types/common-tags": "^1.8.0",
+        "@types/cron": "^1.7.1",
         "@types/eslint": "^6.1.1",
         "@types/event-loop-lag": "^1.0.30",
         "@types/express": "^4.17.1",
@@ -49,6 +50,7 @@
         "bufferutil": "^4.0.1",
         "chance": "^1.0.18",
         "common-tags": "^1.8.0",
+        "cron": "^1.7.2",
         "cuid": "^2.1.6",
         "discord-message-tasks": "^1.0.5",
         "discord.js": "github:vladfrangu/discOwOd.js#sharding-cleanup",
