--- a/package.json
+++ b/package.json
@@ -28,55 +28,54 @@
   "homepage": "https://gitlab.com/Clemens.E/better-airhorn#README",
   "dependencies": {
     "@rocka/mp3-duration": "^2.0.0",
-    "@sentry/node": "^5.6.1",
+    "@sentry/node": "^5.9.0",
     "@types/common-tags": "^1.8.0",
     "@types/cron": "^1.7.1",
-    "@types/eslint": "^6.1.1",
+    "@types/eslint": "^6.1.3",
     "@types/event-loop-lag": "^1.0.30",
-    "@types/express": "^4.17.1",
-    "@types/fluent-ffmpeg": "^2.1.10",
+    "@types/express": "^4.17.2",
+    "@types/fluent-ffmpeg": "^2.1.11",
     "@types/get-folder-size": "^2.0.0",
     "@types/mkdirp": "^0.5.2",
     "@types/moment-duration-format": "^2.2.2",
-    "@types/node": "^12.7.8",
-    "@types/node-fetch": "^2.5.2",
+    "@types/node": "^12.12.14",
+    "@types/node-fetch": "^2.5.4",
     "@types/pg": "^7.11.2",
     "@types/string-similarity": "^3.0.0",
-    "@types/ws": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/parser": "^2.3.1",
-    "@typescript-eslint/typescript-estree": "^2.3.1",
+    "@types/ws": "^6.0.4",
+    "@typescript-eslint/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/parser": "^2.9.0",
+    "@typescript-eslint/typescript-estree": "^2.9.0",
     "abort-controller": "^3.0.0",
     "appmetrics-dash": "^5.2.0",
     "better-sqlite-pool": "^0.2.2",
     "bufferutil": "^4.0.1",
-    "chance": "^1.0.18",
     "common-tags": "^1.8.0",
     "cron": "^1.7.2",
     "cuid": "^2.1.6",
     "discord-message-tasks": "^1.0.5",
     "discord.js": "github:vladfrangu/discOwOd.js#sharding-cleanup",
-    "dotenv": "^8.0.0",
-    "enmap": "^5.1.2",
-    "eslint": "^6.5.0",
+    "dotenv": "^8.2.0",
+    "enmap": "^5.2.3",
+    "eslint": "^6.7.1",
     "event-loop-lag": "^1.4.0",
     "filesize-parser": "^1.5.0",
     "js-logger": "^1.6.0",
     "lame": "github:TooTallNate/node-lame",
     "mkdirp": "^0.5.1",
     "moment": "^2.24.0",
-    "moment-duration-format": "2.2.2",
+    "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.0",
     "node-lame": "^1.2.0",
-    "node-opus": "^0.3.2",
-    "pg": "^7.12.0",
-    "readdirp": "^3.1.1",
-    "snyk": "^1.230.5",
+    "node-opus": "^0.3.3",
+    "pg": "^7.14.0",
+    "readdirp": "^3.2.0",
+    "snyk": "^1.252.0",
     "string-similarity": "^3.0.0",
-    "typescript": "^3.6.3",
+    "typescript": "^3.7.2",
     "typescript-estree": "^18.1.0",
     "veza": "^1.1.0",
-    "zlib-sync": "^0.1.5"
+    "zlib-sync": "^0.1.6"
   },
   "nodemonConfig": {
     "ignore": [
@@ -93,6 +92,6 @@
   },
   "snyk": true,
   "devDependencies": {
-    "ts-node": "^8.4.1"
+    "ts-node": "^8.5.4"
   }
 }
