--- a/package.json
+++ b/package.json
@@ -28,30 +28,16 @@
   "homepage": "https://gitlab.com/Clemens.E/better-airhorn#README",
   "dependencies": {
     "@rocka/mp3-duration": "^2.0.0",
-    "@sentry/node": "^5.10.2",
-    "@types/common-tags": "^1.8.0",
-    "@types/cron": "^1.7.1",
-    "@types/eslint": "^6.1.3",
-    "@types/event-loop-lag": "^1.0.30",
-    "@types/express": "^4.17.2",
-    "@types/fluent-ffmpeg": "^2.1.12",
-    "@types/get-folder-size": "^2.0.0",
-    "@types/mkdirp": "^0.5.2",
-    "@types/moment-duration-format": "^2.2.2",
-    "@types/node": "^12.12.21",
-    "@types/node-fetch": "^2.5.4",
-    "@types/pg": "^7.14.1",
-    "@types/string-similarity": "^3.0.0",
-    "@types/ws": "^6.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
-    "@typescript-eslint/typescript-estree": "^2.17.0",
+    "@sentry/node": "^5.12.3",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "@typescript-eslint/typescript-estree": "^2.19.2",
     "abort-controller": "^3.0.0",
     "appmetrics-dash": "^5.3.0",
     "better-sqlite-pool": "^0.2.2",
     "bufferutil": "^4.0.1",
     "common-tags": "^1.8.0",
-    "cron": "^1.7.2",
+    "cron": "^1.8.2",
     "cuid": "^2.1.8",
     "discord-message-tasks": "^1.0.5",
     "discord.js": "github:vladfrangu/discOwOd.js#fix-internal-sharding-again",
@@ -66,13 +52,13 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.0",
-    "node-lame": "^1.2.0",
+    "node-lame": "^1.2.2",
     "node-opus": "^0.3.3",
-    "pg": "^7.17.1",
+    "pg": "^7.18.1",
     "readdirp": "^3.3.0",
-    "snyk": "^1.290.1",
+    "snyk": "^1.291.0",
     "string-similarity": "^3.0.0",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.5",
     "typescript-estree": "^18.1.0",
     "veza": "^1.1.0",
     "zlib-sync": "^0.1.6"
@@ -92,6 +78,19 @@
   },
   "snyk": true,
   "devDependencies": {
-    "ts-node": "^8.5.4"
+    "@types/common-tags": "^1.8.0",
+    "ts-node": "^8.6.2",
+    "@types/cron": "^1.7.1",
+    "@types/eslint": "^6.1.8",
+    "@types/event-loop-lag": "^1.0.30",
+    "@types/express": "^4.17.2",
+    "@types/get-folder-size": "^2.0.0",
+    "@types/mkdirp": "^0.5.2",
+    "@types/moment-duration-format": "^2.2.2",
+    "@types/node": "^12.12.21",
+    "@types/node-fetch": "^2.5.4",
+    "@types/pg": "^7.14.1",
+    "@types/string-similarity": "^3.0.0",
+    "@types/ws": "^6.0.4"
   }
 }
