--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "better-airhorn",
   "version": "2.0.0",
-  "description": "Replacement for Airhorn Solutions because I really liked that bot.",
-  "main": "index.js",
+  "description": "Replacement for Airhorn Solutions with additional features",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
     "debug": "nodemon --inspect=0 src/index.ts",
-    "build": "tsc",
+    "build": "tsc -p ./tsconfig.json",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
   },
@@ -79,7 +79,6 @@
   "snyk": true,
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
-    "ts-node": "^8.6.2",
     "@types/cron": "^1.7.1",
     "@types/eslint": "^6.1.8",
     "@types/event-loop-lag": "^1.0.30",
@@ -87,10 +86,12 @@
     "@types/get-folder-size": "^2.0.0",
     "@types/mkdirp": "^0.5.2",
     "@types/moment-duration-format": "^2.2.2",
-    "@types/node": "^12.12.21",
+    "@types/node": "^12.12.27",
     "@types/node-fetch": "^2.5.4",
     "@types/pg": "^7.14.1",
     "@types/string-similarity": "^3.0.0",
-    "@types/ws": "^6.0.4"
+    "@types/ws": "^6.0.4",
+    "ts-node": "^8.6.2",
+    "@types/filesize-parser": "^1.5.0"
   }
 }
