--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,3 +21,10 @@ jobs:
     - run: npm run build --if-present
       env:
         CI: true
+    - uses: montudor/action-zip@v0.1.0
+      with:
+        args: zip -r9q ./artifact-v10.zip node_modules dist
+    - uses: actions/upload-artifact@v1
+      with:
+        name: ba-build-artifact
+        path: ./artifact-v10.zip 
