--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
     "parser": "@typescript-eslint/parser",
-    "extends": ["plugin:@typescript-eslint/recommended"],
+    "extends": [
+        "plugin:@typescript-eslint/recommended"
+    ],
     "env": {
         "node": true,
         "es6": true
@@ -12,48 +14,102 @@
     },
     "rules": {
         "@typescript-eslint/no-explicit-any": 0,
-        "brace-style": ["error", "1tbs", {
-            "allowSingleLine": true
-        }],
-        "comma-dangle": ["error", "always-multiline"],
+        "brace-style": [
+            "error",
+            "1tbs",
+            {
+                "allowSingleLine": true
+            }
+        ],
+        "comma-dangle": [
+            "error",
+            "always-multiline"
+        ],
         "comma-spacing": "error",
         "comma-style": "error",
-        "curly": ["error", "multi-line", "consistent"],
-        "dot-location": ["error", "property"],
+        "curly": [
+            "error",
+            "multi-line",
+            "consistent"
+        ],
+        "dot-location": [
+            "error",
+            "property"
+        ],
         "handle-callback-err": "off",
-        "indent": ["off", "tab"],
-        "max-nested-callbacks": ["error", {
-            "max": 4
-        }],
-        "max-statements-per-line": ["error", {
-            "max": 2
-        }],
+        "indent": [
+            "off",
+            "tab"
+        ],
+        "max-nested-callbacks": [
+            "error",
+            {
+                "max": 4
+            }
+        ],
+        "max-statements-per-line": [
+            "error",
+            {
+                "max": 2
+            }
+        ],
         "no-console": "off",
-        "no-empty-function": "error",
+        "no-empty-function": [
+            "error",
+            {
+                "allow": [
+                    "constructors"
+                ]
+            }
+        ],
         "no-floating-decimal": "error",
         "no-inline-comments": "error",
         "no-lonely-if": "error",
         "no-multi-spaces": "off",
-        "no-multiple-empty-lines": ["error", {
-            "max": 2,
-            "maxEOF": 1,
-            "maxBOF": 0
-        }],
-        "no-shadow": ["error", {
-            "allow": ["err", "resolve", "reject"]
-        }],
-        "no-trailing-spaces": ["error"],
+        "no-multiple-empty-lines": [
+            "error",
+            {
+                "max": 2,
+                "maxEOF": 1,
+                "maxBOF": 0
+            }
+        ],
+        "no-shadow": [
+            "error",
+            {
+                "allow": [
+                    "err",
+                    "resolve",
+                    "reject"
+                ]
+            }
+        ],
+        "no-trailing-spaces": [
+            "error"
+        ],
         "no-var": "error",
-        "object-curly-spacing": ["error", "always"],
+        "object-curly-spacing": [
+            "error",
+            "always"
+        ],
         "prefer-const": "error",
-        "quotes": ["error", "single"],
-        "semi": ["error", "always"],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ],
         "space-before-blocks": "error",
-        "space-before-function-paren": ["off", {
-            "anonymous": "never",
-            "named": "never",
-            "asyncArrow": "always"
-        }],
+        "space-before-function-paren": [
+            "off",
+            {
+                "anonymous": "never",
+                "named": "never",
+                "asyncArrow": "always"
+            }
+        ],
         "space-in-parens": "error",
         "space-infix-ops": "error",
         "space-unary-ops": "error",
