--- a/package.json
+++ b/package.json
@@ -1,96 +1,78 @@
 {
-  "name": "better-airhorn",
-  "version": "2.0.0",
-  "description": "Replacement for Airhorn Solutions with additional features",
-  "main": "src/index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
-    "debug": "nodemon --inspect=0 src/index.ts",
-    "build": "tsc -p ./tsconfig.json",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/Clemens.E/better-airhorn.git"
-  },
-  "keywords": [
-    "discord",
-    "airhorn",
-    "record audio"
-  ],
-  "author": "Clemens Ertle",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://gitlab.com/Clemens.E/better-airhorn/issues"
-  },
-  "homepage": "https://gitlab.com/Clemens.E/better-airhorn#README",
-  "dependencies": {
-    "@rocka/mp3-duration": "^2.0.0",
-    "@sentry/node": "^5.15.4",
-    "appmetrics-dash": "^5.3.0",
-    "better-sqlite-pool": "^0.2.3",
-    "bufferutil": "^4.0.1",
-    "common-tags": "^1.8.0",
-    "cron": "^1.8.2",
-    "cuid": "^2.1.8",
-    "discord-message-tasks": "^1.0.5",
-    "discord.js": "github:vladfrangu/discOwOd.js#fix-internal-sharding-again",
-    "dotenv": "^8.2.0",
-    "enmap": "^5.2.4",
-    "event-loop-lag": "^1.4.0",
-    "filesize-parser": "^1.5.0",
-    "js-logger": "^1.6.0",
-    "lame": "github:TooTallNate/node-lame",
-    "mkdirp": "^1.0.3",
-    "moment": "^2.24.0",
-    "moment-duration-format": "^2.3.2",
-    "node-fetch": "^2.6.0",
-    "node-lame": "^1.2.2",
-    "node-opus": "^0.3.3",
-    "pg": "^8.0.0",
-    "readdirp": "^3.4.0",
-    "string-similarity": "^4.0.1",
-    "veza": "^1.1.0",
-    "zlib-sync": "^0.1.6"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "**/*.test.ts",
-      "**/*.spec.ts",
-      ".git",
-      "node_modules"
+    "name": "better-airhorn",
+    "version": "3.0.0",
+    "description": "discord bot to record, upload and play audiofiles like a soundboard, includes a fully working dashboard",
+    "main": "src/index.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "ts-node src/index.ts",
+        "debug": "nodemon --inspect=0 src/index.ts",
+        "build": "tsc -p ./tsconfig.json",
+        "snyk-protect": "snyk protect",
+        "prepare": "npm run snyk-protect"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Clemens-E/better-airhorn.git"
+    },
+    "keywords": [
+        "discord",
+        "better-airhorn",
+        "soundboard",
+        "web-dashboard"
     ],
-    "watch": [
-      "src"
-    ],
-    "exec": "npm start",
-    "ext": "ts"
-  },
-  "snyk": true,
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "@typescript-eslint/typescript-estree": "^2.26.0",
-    "eslint": "^6.8.0",
-    "typescript": "^3.8.3",
-    "typescript-estree": "^18.1.0",
-    "snyk": "^1.305.0",
-    "@types/common-tags": "^1.8.0",
-    "@types/cron": "^1.7.2",
-    "@types/eslint": "^6.1.9",
-    "@types/event-loop-lag": "^1.0.30",
-    "@types/express": "^4.17.4",
-    "@types/get-folder-size": "^2.0.0",
-    "@types/mkdirp": "^1.0.0",
-    "@types/moment-duration-format": "^2.2.2",
-    "@types/node": "^12.12.31",
-    "@types/node-fetch": "^2.5.5",
-    "@types/pg": "^7.14.3",
-    "@types/string-similarity": "^3.0.0",
-    "@types/ws": "^7.2.3",
-    "ts-node": "^8.8.1",
-    "@types/filesize-parser": "^1.5.0"
-  }
+    "author": "Clemens E",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Clemens-E/better-airhorn/issues"
+    },
+    "dependencies": {
+        "@discordjs/opus": "^0.1.0",
+        "bufferutil": "^4.0.1",
+        "common-tags": "^1.8.0",
+        "discord.js": "^12.0.2",
+        "dotenv": "^8.2.0",
+        "filesize-parser": "^1.5.0",
+        "js-logger": "^1.6.0",
+        "minio": "^7.0.15",
+        "pg": "^7.18.2",
+        "readdirp": "^3.4.0",
+        "redlock": "^4.1.0",
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "^6.5.5",
+        "shori": "^1.0.13",
+        "tsyringe": "^4.1.0",
+        "typeorm": "^0.2.24",
+        "utf-8-validate": "^5.0.2",
+        "zlib-sync": "^0.1.6"
+    },
+    "homepage": "https://github.com/Clemens-E/better-airhorn#readme",
+    "devDependencies": {
+        "@types/common-tags": "^1.8.0",
+        "@types/dotenv": "^8.2.0",
+        "@types/redlock": "^4.0.1",
+        "@types/filesize-parser": "^1.5.0",
+        "@types/minio": "^7.0.5",
+        "@types/node": "^13.9.2",
+        "@typescript-eslint/eslint-plugin": "^2.24.0",
+        "@typescript-eslint/parser": "^2.24.0",
+        "@typescript-eslint/typescript-estree": "^2.24.0",
+        "eslint": "^6.8.0",
+        "snyk": "^1.301.0",
+        "typescript": "^3.8.3",
+        "typescript-estree": "^18.1.0"
+    },
+    "nodemonConfig": {
+        "ignore": [
+            "**/*.test.ts",
+            "**/*.spec.ts",
+            ".git",
+            "node_modules"
+        ],
+        "watch": [
+            "src"
+        ],
+        "exec": "npm start",
+        "ext": "ts"
+    }
 }
