--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,32 @@
 {
     "compilerOptions": {
+        "outDir": "./dist",
         "module": "commonjs",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es6",
-        "noImplicitAny": true,
-        "moduleResolution": "node",
+        "target": "ES2019",
+        "noUnusedLocals": false,
+        "strictPropertyInitialization": false,
         "sourceMap": true,
-        "outDir": "dist",
+        "moduleResolution": "node",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "baseUrl": ".",
-        "resolveJsonModule": true,
         "paths": {
             "*": [
                 "node_modules/*",
                 "src/types/*"
             ]
         },
-        "types": ["node"]
+        "types": [
+            "node"
+        ],
+        "esModuleInterop": true
     },
     "include": [
-        "./src/**/*", "configs"
+        "./src/**/*.ts"
+    ],
+    "exclude": [
+        "**/node_modules",
+        "**/dist",
+        "**/coverage"
     ]
 }
