fix minor issues and adjust ping command

--- a/env.example
+++ b/env.example
@@ -1,7 +1,11 @@
-PSQL=< psql url here >
-BTOKEN=< discord token here >
-GLOTTOKEN=< glot token here>
-DBLTOKEN=< dbl token here >
-DBLSECRET=< dbl secret here >
-SENTRYURL=< sentry url here >
-PROD=false or true
+PG=
+DISCORD_TOKEN=
+GLOTTOKEN=
+DBLTOKEN=
+DBLSECRET=
+SENTRYURL=
+MINIO_AK=
+MINIO_SK=
+MINIO_URL=
+NODE_ENV=not-production
+LOGGING=DEBUG
