--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@discordjs/opus": "^0.1.0",
+        "@types/mkdirp": "^1.0.0",
         "bufferutil": "^4.0.1",
         "common-tags": "^1.8.0",
         "discord.js": "^12.0.2",
@@ -35,12 +36,13 @@
         "filesize-parser": "^1.5.0",
         "js-logger": "^1.6.0",
         "minio": "^7.0.15",
+        "mkdirp": "^1.0.4",
         "pg": "^7.18.2",
         "readdirp": "^3.4.0",
         "redlock": "^4.1.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
-        "shori": "^1.0.13",
+        "shori": "^1.0.16",
         "tsyringe": "^4.1.0",
         "typeorm": "^0.2.24",
         "utf-8-validate": "^5.0.2",
