--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@types/filesize-parser": "^1.5.0",
         "@types/minio": "^7.0.5",
         "@types/node": "^13.9.2",
+        "@types/node-fetch": "^2.5.6",
         "@types/redlock": "^4.0.1",
         "@typescript-eslint/eslint-plugin": "^2.24.0",
         "@typescript-eslint/parser": "^2.24.0",
